--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,13 +89,13 @@
             android:layout_alignStart="@+id/textInputLayout"
             android:layout_below="@+id/textInputLayout"
             android:layout_marginTop="33dp"
+            android:layout_gravity="center"
             android:background="#97EB0729"
+            android:gravity="center"
             android:onClick="OnLogin"
             android:text="Login"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_gravity="center"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button2"
@@ -107,12 +107,31 @@
             android:layout_alignStart="@+id/button"
             android:layout_below="@+id/button"
             android:layout_marginTop="23dp"
+            android:layout_gravity="center"
             android:background="#97EB0729"
+            android:gravity="center"
             android:onClick="Onregister"
             android:text="Register"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="276dp"
+            android:layout_height="40dp"
+            android:layout_alignEnd="@+id/button2"
+            android:layout_alignLeft="@+id/button2"
+            android:layout_alignRight="@+id/button2"
+            android:layout_alignStart="@+id/button2"
+            android:layout_below="@+id/button2"
+            android:layout_marginTop="23dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="27dp"
+            android:background="#97EB0729"
             android:gravity="center"
-            android:layout_gravity="center"/>
+            android:onClick="OnExit"
+            android:text="Exit"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
     </RelativeLayout>
 </LinearLayout>
