--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -100,12 +101,12 @@
             android:id="@+id/insert_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@android:color/transparent"
-            app:srcCompat="@drawable/ic_002_add_image"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="27dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="27dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_002_add_image" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout5"
