--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.lzyang.fyptest.ProfileActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:layout_marginTop="5dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:civ_border_color="#FF000000"/>
+        android:layout_marginTop="15dp"
+        app:civ_border_color="#FF000000" />
 
     <LinearLayout
         android:layout_below="@+id/profile_image"
@@ -40,7 +39,7 @@
             android:textStyle="bold"
             android:text="Name" />
         <TextView
-            android:id="@+id/profile_name"
+            android:id="@+id/prof_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -100,6 +99,40 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#EF9A9A"/>
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="21dp"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:text="Email" />
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="18dp"
+            android:text=""
+            android:textColor="#424242" />
+
+        <Button
+            android:id="@+id/EditButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onEdit"
+            android:text="Edit Profile"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_gravity="center"
+            />
 
         <Button
             android:id="@+id/logoutButton"
