--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -94,6 +94,28 @@
             android:textSize="18dp"
             android:text="0114545455"
             android:textColor="#424242" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EF9A9A"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="21dp"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:text="Email" />
+        <TextView
+            android:id="@+id/text_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="18dp"
+            android:text=" "
+            android:textColor="#424242" />
 
         <View
             android:layout_width="match_parent"
