--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -86,7 +86,7 @@
             android:id="@+id/button3"
             android:layout_width="276dp"
             android:layout_height="40dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="5dp"
             android:onClick="Onsave"
             android:background="@color/colorRed"
             android:textColor="@android:color/white"
@@ -94,9 +94,9 @@
             android:gravity="center"
             android:layout_gravity="center"
             android:text="Confirm"
-            android:layout_below="@+id/textInputLayout5"
-            android:layout_alignLeft="@+id/textInputLayout5"
-            android:layout_alignStart="@+id/textInputLayout5" />
+            android:layout_below="@+id/textInputLayout6"
+            android:layout_alignLeft="@+id/textInputLayout6"
+            android:layout_alignStart="@+id/textInputLayout6" />
 
         <ImageButton
             android:id="@+id/insert_image"
@@ -131,6 +131,31 @@
                 android:ems="10"
                 android:hint="Contact Number"
                 android:inputType="phone"
+                android:paddingLeft="15dp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout6"
+            android:layout_width="276dp"
+            android:layout_height="60dp"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorAccent"
+            android:gravity="center"
+            android:layout_below="@+id/textInputLayout5"
+            android:layout_alignLeft="@+id/textInputLayout5"
+            android:layout_alignStart="@+id/textInputLayout5">
+
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="276dp"
+                android:layout_height="40dp"
+                android:layout_alignBottom="@+id/textInputLayout6"
+                android:layout_alignLeft="@+id/textInputLayout5"
+                android:layout_alignStart="@+id/textInputLayout5"
+                android:background="@drawable/edittext1"
+                android:ems="10"
+                android:hint="Email"
+                android:inputType="text"
                 android:paddingLeft="15dp" />
         </android.support.design.widget.TextInputLayout>
 
